syntax = "proto3";

package protos;

import "github.com/ultramesh/flato-common/types/protos/transaction.proto";

//======================================================
//             transaction message
//======================================================

message transaction {
  protos.Transaction tx = 1;
}

message batch_id {
  uint64 author = 1;
  string batch_hash = 2;
}

message batch {
  batch_id batch_id = 1;
  repeated string hash_list = 2;
  repeated transaction tx_list = 3;
  int64 timestamp = 4;
}


//======================================================
//             unique identifier message
//======================================================

// UI is a unique identifier assigned to a message by a USIG
message UI {
  // Unique, monotonic, and sequential counter
  uint64 counter = 1;
  // Certificate created by a tamper-proof component of the USIG
  // that certifies the counter assigned to a particular message
  bytes  cert = 2;
}

//======================================================
//                 ordered message
//======================================================

enum order_type {
  REQ = 0;
  LOG = 1;
}

message ordered_msg {
  order_type type = 1;
  uint64 sequence = 2;
  batch_id batch_id = 3;
}

message UI_msg {
  uint64 author = 1;
  bytes payload = 2;
  UI UI = 3;
}

//======================================================
//             communicate message
//======================================================

enum comm_type {
  BATCH = 0;
  ORDER = 1;
}

message comm_msg {
  uint64 author = 1;
  comm_type type = 2;
  bytes payload = 3;
}
